discussion/kv_engine/155082/155082_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46750 Replace Magma::WriteOperation::NewDocUpdate by NewDocUpsert

Magma has renamed NewDocUpdate to NewDocUpsert for naming clarity.
NewDocUpdate is now just an alias to NewDocUpsert and will be removed
once this patch is merged.

Change-Id: Iab597e04c2f1a3a01c9ed478036b4cc61f30418a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2021-06-04 08:17:25.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 08:27:19.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31119/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/logger/custom_rotating_file_sink.h:68:29:
error: no member named "pattern_formatter" in namespace "spdlog"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31119/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9479/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:50: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void sink_it_(spdlog::details::log_msg& msg) override;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/spdlog_new/include/spdlog/logger.h:350:18: note: hidden overloaded virtual function "spdlog::logger::sink_it_" declared here: type mismatch at 1st parameter ("const details::log_msg &" vs "spdlog::details::log_msg &")
    virtual void sink_it_(const details::log_msg &msg);
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9479/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:50:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9479/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36426/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\bucket_logger.h(179): error C3668: "BucketLogger::sink_it_": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36426/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10122/ : FAILURE

Compile error at [2021-06-04T08:22:17.689Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:50:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10122/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1171/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11052/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11197/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11463/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11463/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19050/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19050/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8075/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/30/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-04 08:57:15.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11468/ : FAILURE

Compile error at [2021-06-04T08:55:12.295Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:50:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11468/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31124/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/bucket_logger.h:179:50:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31124/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9484/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:50: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void sink_it_(spdlog::details::log_msg& msg) override;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/third_party/spdlog_new/include/spdlog/logger.h:350:18: note: hidden overloaded virtual function "spdlog::logger::sink_it_" declared here: type mismatch at 1st parameter ("const details::log_msg &" vs "spdlog::details::log_msg &")
    virtual void sink_it_(const details::log_msg &msg);
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9484/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:179:50:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9484/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36433/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\bucket_logger.h(179): error C3668: "BucketLogger::sink_it_": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10127/ : FAILURE

Compile error at [2021-06-04T08:49:21.957Z] ../kv_engine/engines/ep/src/bucket_logger.h:179:50:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10127/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1176/ : FAILURE

Compile error at [2021-06-04T08:54:13.725Z] ../kv_engine/logger/custom_rotating_file_sink.h:68:29:
error: no member named "pattern_formatter" in namespace "spdlog"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan.DJR_testing_please_ignore/job/master/1176/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11057/ : FAILURE

Compile error at [2021-06-04T08:54:26.003Z] ../kv_engine/logger/custom_rotating_file_sink.h:68:29:
error: ?pattern_formatter? is not a member of ?spdlog?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11057/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11202/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19055/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19055/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8080/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/35/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
